fix: change navbar visibility to `hidden`
- `collapse` caused responsiveness issues on firefox
  - menu button was pushed to the right when the navbar was collapsed

--- a/frontend/src/styles/mobile-styles.scss
+++ b/frontend/src/styles/mobile-styles.scss
@@ -9,7 +9,7 @@ $small-mobile-width: 360px;
         width: 100%;
         overflow: hidden;
         max-height: 0px;
-        visibility: collapse;
+        visibility: hidden;
         @include transition(max-height visibility);
 
         &--open{
